[gd_scene load_steps=11 format=3 uid="uid://b8ji1j65nwsuy"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_bson1"]
[ext_resource type="PackedScene" uid="uid://xrpqt6mi21dn" path="res://scenes/wall.tscn" id="1_xihky"]
[ext_resource type="PackedScene" uid="uid://cirojjxcatqt6" path="res://scenes/paddle.tscn" id="3_xa0gr"]
[ext_resource type="Script" path="res://scripts/paddles/player_paddle.gd" id="4_ns0vb"]
[ext_resource type="Script" path="res://scripts/paddles/enemy_paddle.gd" id="6_enock"]
[ext_resource type="PackedScene" uid="uid://1a7usic1r6rb" path="res://scenes/ball.tscn" id="7_c8wfy"]
[ext_resource type="Script" path="res://scripts/ball.gd" id="8_2bsxx"]
[ext_resource type="Texture2D" uid="uid://bvkwxdl12182v" path="res://assets/line.png" id="9_7tywe"]
[ext_resource type="PackedScene" uid="uid://cmsbr0sd3n8ta" path="res://scenes/out_zone.tscn" id="10_d3o00"]
[ext_resource type="PackedScene" uid="uid://c2jllfue03nkn" path="res://scenes/ui.tscn" id="10_qp8fi"]

[node name="Main" type="Node2D"]
script = ExtResource("1_bson1")

[node name="Walls" type="Node" parent="."]

[node name="TopWall" parent="Walls" instance=ExtResource("1_xihky")]
position = Vector2(0, -1050)
rotation = 1.5708
scale = Vector2(2, 18)

[node name="BottomWall" parent="Walls" instance=ExtResource("1_xihky")]
position = Vector2(0, 1200)
rotation = 1.5708
scale = Vector2(2, 18)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.4, 0.4)

[node name="PlayerPaddle" parent="." instance=ExtResource("3_xa0gr")]
position = Vector2(-1800, 0)
gravity_scale = 0.0
script = ExtResource("4_ns0vb")

[node name="EnemyPaddle" parent="." node_paths=PackedStringArray("ball") instance=ExtResource("3_xa0gr")]
position = Vector2(1800, 0)
gravity_scale = 0.0
script = ExtResource("6_enock")
ball = NodePath("../Ball")

[node name="Ball" parent="." instance=ExtResource("7_c8wfy")]
script = ExtResource("8_2bsxx")
initial_speed = 50

[node name="LeftOutZone" parent="." instance=ExtResource("10_d3o00")]
position = Vector2(-2330, 74)

[node name="RightOutZone" parent="." instance=ExtResource("10_d3o00")]
position = Vector2(2330, 74)

[node name="MiddleLine" type="Line2D" parent="."]
texture_repeat = 2
position = Vector2(0, -1050)
points = PackedVector2Array(0, 0, 0, 2250)
width = 32.0
texture = ExtResource("9_7tywe")
texture_mode = 1

[node name="UI" parent="." instance=ExtResource("10_qp8fi")]

[connection signal="point_scored" from="LeftOutZone" to="." method="_on_enemy_point_scored"]
[connection signal="point_scored" from="RightOutZone" to="." method="_on_player_point_scored"]
